--- a/.gitmodules
+++ b/.gitmodules
@@ -130,7 +130,7 @@
 	url = https://github.com/shikokuchuo/mirai
 [submodule "nanonext"]
 	path = nanonext
-	url = https://github.com/shikokuchuo/nanonext
+	url = https://github.com/r-lib/nanonext
 	registered = false
 [submodule "nanotime"]
 	path = nanotime
