--- a/.gitmodules
+++ b/.gitmodules
@@ -124,6 +124,10 @@
 [submodule "mirai"]
 	path = mirai
 	url = https://github.com/shikokuchuo/mirai
+[submodule "nanonext"]
+	path = nanonext
+	url = https://github.com/r-lib/nanonext
+	registered = false
 [submodule "nanotime"]
 	path = nanotime
 	url = https://github.com/eddelbuettel/nanotime
